@@ -1,6 +1,6 @@
-.TH PNGCHECK "1" "December 2020" "pngcheck 3.0.0" "User Commands"
+.TH PNGCHECK "1" "January 2021" "pngcheck 3.0.1" "User Commands"
 .SH NAME
-pngcheck \- manual page for pngcheck 3.0.0
+pngcheck \- manual page for pngcheck 3.0.1
 .SH SYNOPSIS
 .B pngcheck
 .RI [ \-7cfpqtv ]
@@ -13,7 +13,7 @@ pngcheck \- manual page for pngcheck 3.0.0
 .B pngcheck
 .RI [ \-7cfpqstvx ] \ file-containing-PNGs ...
 .SH DESCRIPTION
-PNGcheck, version 3.0.0 of 12 December 2020,
+PNGcheck, version 3.0.1 of 24 January 2021,
 by Alexander Lehmann, Andreas Dilger and Greg Roelofs.
 .PP
 Test PNG, JNG or MNG image files for corruption, and print size/type info.
